--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
 	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.10.0'
 	implementation group: 'org.apache.tuweni', name: 'tuweni-toml', version: '2.2.0'
+	implementation group: 'com.baomidou', name: 'mybatis-plus-boot-starter', version: '3.5.2'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
