实现从CurseForge下载MOD（需提供modId和fileId）
实现获取Mod File
增加CurseForgeOptions
现在uri以"http://"或者"https://"开头，不拼接baseUrl
补充单元测试

Signed-off-by: Arathi <ssdfa7@gmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,10 @@
+spring:
+  profiles:
+    active:
+      - dev
+
 curse-forge:
+  base-url: ${CURSE_FORGE_API_URL:https://api.curseforge.com}
   api-key: ${CURSE_FORGE_API_KEY:}
+  indexes-path: ${CURSE_FORGE_INDEXES_PATH:}
+  mods-path: ${CURSE_FORGE_MODS_PATH:}
