实现了init命令
1. 部分结构尝试使用枚举
2. JSON序列化方法增加了格式化选项

Signed-off-by: Arathi <ssdfa7@gmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,9 @@ spring:
     active:
       - dev
 
+server:
+  port: 8080
+
 curse-forge:
   base-url: ${CURSE_FORGE_API_URL:https://api.curseforge.com}
   api-key: ${CURSE_FORGE_API_KEY:}
