--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ spring:
   profiles:
     active:
       - dev
+  main:
+    web-application-type: servlet
 
 server:
   port: 8080
@@ -11,3 +13,5 @@ curse-forge:
   api-key: ${CURSE_FORGE_API_KEY:}
   indexes-path: ${CURSE_FORGE_INDEXES_PATH:}
   mods-path: ${CURSE_FORGE_MODS_PATH:}
+  ignore-size-check: false
+  ignore-hash-check: false
